# lkpatcher

./: .gitignore  README.md  format.sh  mypy.ini  patches.json  pyproject.toml  requirements.txt  ruff.toml  shell.nix
.github/workflows/: lkpatcher.yml
lkpatcher/: __init__.py  __main__.py  config.py  exceptions.py  main.py  patcher.py
