[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lkpatcher"
version = "3.0.0"
authors = [
    { name = "Roger Ortiz", email = "me@r0rt1z2.com" }
]
description = "A simple tool for patching and modifying the bootloader (LK) of MTK devices."
readme = "README.md"
requires-python = ">=3.11.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
homepage = "https://github.com/R0rt1z2/lkpatcher"